2006-07-11  Jeremy Cribb <jcribb@email.unc.edu>
	- msd.m: suppressed warning for dividing by zero when requested window is too large.  Also removed NaN's that were reported when the window size was too large.

2006-07-10  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: Fixed a typo and a bug in calculation of default Tau.

2006-07-05  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: 
	- Fixed nasty errors in the documentation and brought it up to date.
	- Exposed the standard error results to the output.
2006-06-20  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: Now puts five points (instead of 3) in each decade for default window vector.
2006-06-05  Kalpit Desai <kvdesai@email.unc.edu>
	* laser_msd.m: 
	- Essentially rewrote the whole module. Now allows to look at diffusion along each axis (X,Y,Z) as well as in each plane (XY, YZ, ZX) independently.
	- Output interface had to be changed to report 1D and 2D diffusion parameters
	- Corrected documentation to reflect changes in the interface.
	* msdbase.m: Added some comments

2006-06-05  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: corrected documentation and added w to output structure.

2006-05-19  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: fixed minor bug in determination of w.

2006-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: added parameter to plot output in [Hz] or [rad/s].

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: minor changes to plot linestyle and output structure.

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* rod_coord_corr.m: added.  beginning of a function that will analyze the correlation between coordinate axes for a diffusing rod (axial, normal, and radial).
	* laser_msd.m: 
			- file loading is now fixed to use latest load_laser_tracking.
			- computation of mean and error in plot is now fixed.
	* msd.m: added code to ignore window sizes that do not exist.
	* ve.m: added code to ignore window sizes that do not exist.
	